fixed invisible containers

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -39,6 +39,6 @@
 }
 .app{
   background-color: #fff2e2 ;
-  height: 100vh;
+  height: 125vh;
   width: 100vw;
 }
